<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/general_background_color"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/notification_question_color"/>
    <Button
        android:id="@+id/fragment_main_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/navigation_menu_play"
        android:textColor="@android:color/white"
        android:layout_marginTop="80dp"
        android:singleLine="true"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/ic_play"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/fragment_main_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/navigation_menu_profile"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/ic_profile"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/fragment_main_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/navigation_menu_test"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/ic_test"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/fragment_main_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/navigation_menu_settings"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/ic_settings"
        android:layout_gravity="center"
        />
    <!--<Button
        android:id="@+id/fragment_main_send_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:minWidth="0dp"
        android:drawableLeft="@drawable/ic_plus"
        android:maxWidth="200dp"
        android:layout_gravity="center"
        />-->


</LinearLayout>